--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,20 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
+
+  "_version": "18.2.0",
+
   "compilerOptions": {
+      "lib": ["es2023", "DOM"],
+      "target": "es2022",
       "allowJs": true,
       "noEmit": true,
       "strict": false,
-      "module": "commonjs",
-      "moduleResolution": "node",
+      "skipLibCheck": true,
+      "module": "node16",  
+      "moduleResolution": "node16",
       "esModuleInterop": true
   },
-  "extends": "@tsconfig/node18/tsconfig.json",
+  "_comment_extends": "@tsconfig/node18/tsconfig.json",
   "include": [
       "node_modules/bc-stubs/bc/NativeDeclarations/Typedef.d.ts",
       "node_modules/bc-stubs/bc/NativeDeclarations/Messages.d.ts",
