--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "bc-stubs": "^111.0.0",
+        "express": "^5.1.0",
         "lodash": "^4.17.21",
         "lz-string": "^1.5.0",
         "mongodb": "^6.9.0",
@@ -20,6 +21,7 @@
     },
     "devDependencies": {
         "@tsconfig/node18": "^18.2.1",
+        "@types/express": "^5.0.1",
         "@types/lodash": "^4.14.198",
         "@types/node": "^20.17.27",
         "esbuild": "^0.19.4",
