--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
         "lodash": "^4.17.21",
         "lz-string": "^1.5.0",
         "mongodb": "^6.9.0",
-        "prettier": "^3.3.3",
         "prom-client": "^14.2.0",
+        "socket.io": "^4.8.1",
         "socket.io-client": "^4.7.2"
     },
     "devDependencies": {
@@ -25,6 +25,7 @@
         "@types/lodash": "^4.14.198",
         "@types/node": "^20.17.27",
         "esbuild": "^0.19.4",
+        "prettier": "^3.3.3",
         "tsx": "^4.19.1",
         "typescript": "^5.2.2"
     }
