--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,27 +1,37 @@
-name: Docker Image CI
+name: Manual Docker Build
 
 on:
-  push:
-    tags: ['v*.*.*']
-  
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version tag (ex: v1.2.3)'
+        required: true
+        type: string
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     
     - name: Login to GitHub Container Registry
-      uses: docker/login-action@v1
+      uses: docker/login-action@v3
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
     
     - name: Build and push
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v5
       with:
         context: .
         push: true
         tags: |
-          ghcr.io/${{ github.repository }}/labybot:latest
-          ghcr.io/${{ github.repository }}/labybot:${{ github.ref_name }}
+          ghcr.io/${{ github.repository }}:${{ inputs.version }}
+          ghcr.io/${{ github.repository }}:latest
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
